Remove complex numbers activity

--- a/tex/modules/2-V/activities.tex
+++ b/tex/modules/2-V/activities.tex
@@ -433,15 +433,16 @@ The space of \term{\(m \times n\) matrices}
 \end{activity}
 
 \begin{activity}{5}
+  Does the polynomial  \(x^2+x+1\) belong to
+  \(\vspan\{x^2-x,x+1, x^2-1\}\)?
+\end{activity}
+
+\begin{activity}{5}
   Does the matrix \(\begin{bmatrix}3&-2\\1&5\end{bmatrix}\) belong to
   \(\vspan\left\{\begin{bmatrix}1&0\\-3&2\end{bmatrix},
   \begin{bmatrix}-1&-3\\2&2\end{bmatrix}\right\}\)?
 \end{activity}
 
-\begin{activity}{5}
-  Does the complex number \(2i\) belong to
-  \(\vspan\{-3+i,6-2i\}\)?
-\end{activity}
 
 
 \begin{observation}
