Update Module V RAT

--- a/tex/modules/2-V/readiness/outcomes.tex
+++ b/tex/modules/2-V/readiness/outcomes.tex
@@ -1,6 +1,6 @@
 \begin{readinessAssuranceOutcomes}
+\item Use set builder notation to describe sets of vectors.
 \item Add Euclidean vectors and multiply Euclidean vectors by scalars.
-\item Add complex numbers and multiply complex numbers by scalars.
 \item Add polynomials and multiply polynomials by scalars.
 \item Perform basic manipulations of augmented matrices and linear
 systems \listOfStandards{E1,E2,E3}.
