--- a/tex/modules/2-V/readiness/resources.tex
+++ b/tex/modules/2-V/readiness/resources.tex
@@ -1,13 +1,12 @@
 \begin{readinessAssuranceResources}
+\item Set Builder Notation:
+		\url{https://youtu.be/xnfUZ-NTsCE}
 \item Adding and subtracting Euclidean vectors (Khan Acaemdy):
       \url{http://bit.ly/2y8AOwa}
       %  \url{https://www.khanacademy.org/math/precalculus/vectors-precalc/vector-addition-subtraction/v/adding-and-subtracting-vectors}
 \item Linear combinations of Euclidean vectors (Khan Academy):
       \url{http://bit.ly/2nK3wne}
       %  \url{https://www.khanacademy.org/math/precalculus/vectors-precalc/combined-vector-operations/v/combined-vector-operations-example}
-\item Adding and subtracting complex numbers (Khan Academy):
-      \url{http://bit.ly/1PE3ZMQ}
-      % \url{https://www.khanacademy.org/math/precalculus/imaginary-and-complex-numbers/adding-and-subtracting-complex-numbers/v/adding-complex-numbers}
 \item Adding and subtracting polynomials (Khan Academy):
       \url{http://bit.ly/2d5SLGZ}
       % \url{https://www.khanacademy.org/math/algebra/introduction-to-polynomial-expressions/adding-and-subtracting-polynomials/v/adding-and-subtracting-polynomials-1}
