--- a/tex/modules/2-V/readiness/test.tex
+++ b/tex/modules/2-V/readiness/test.tex
@@ -74,37 +74,28 @@
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-\item Simplify the complex number expression
-      \(-4(3-2i)+2(5+i)\).
+
+\item Which of the following vectors is an element of the set
+      \(\setBuilder{\begin{bmatrix}x \\ y \\ z \end{bmatrix}}{ x^2-3y=z} \)?
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \(-2+10i\) % correct
-\item \(3-7i\)
-\item \(4+i\)
-\item \(-1-5i\)
+\item \(\begin{bmatrix} 2 \\ 1 \\ 1 \end{bmatrix}\) % correct
+\item \(\begin{bmatrix} 1 \\ 2 \\ 1 \end{bmatrix}\) 
+\item \(\begin{bmatrix} 1 \\ 1 \\ 2 \end{bmatrix}\) 
+\item \(\begin{bmatrix} 1 \\ 1 \\ 1 \end{bmatrix}\) 
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
-\item Which of these complex numbers might be represented
-      by the following Euclidean vector
-      plotted on the complex plane (where the horizontal axis gives the
-      real part and the vertical axis gives the imaginary part)?
-
-      \begin{center}
-        \begin{tikzpicture}[scale=0.25]
-        \draw[thin,gray,<->] (-5,0) -- (5,0);
-        \draw[thin,gray,<->] (0,-5) -- (0,5);
-        \draw[thick,blue,->] (0,0) -- (-2,3);
-        \end{tikzpicture}
-      \end{center}
+\item Which of the following vectors is an element of the set
+		\(\setBuilder{\begin{bmatrix} x_1 \\ x_2 \\ x_3 \end{bmatrix}}{ x_1+3x_2-x_3=0}\)?
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \(5+i\)
-\item \(-2+3i\) % correct
-\item \(-3-9i\)
-\item \(4i\)
+\item \(\begin{bmatrix} 1 \\ 2 \\ 5 \end{bmatrix}\) 
+\item \(\begin{bmatrix} 2 \\ 1 \\ 5 \end{bmatrix}\) % correct
+\item \(\begin{bmatrix} 1 \\ 5 \\ 2 \end{bmatrix}\) 
+\item \(\begin{bmatrix} 5 \\ 1 \\ 2 \end{bmatrix}\) 
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
