--- a/tex/modules/2-V/activities.tex
+++ b/tex/modules/2-V/activities.tex
@@ -7,7 +7,7 @@ Several properties of the real numbers, such as commutivity:
 \[
   x + y = y + x
 \]
-also hold for Eudlicean vectors with multiple components:
+also hold for Euclidean vectors with multiple components:
 \[
 \begin{bmatrix}x_1\\x_2\end{bmatrix}
 +
