Homogenize notation on first V1 activity

--- a/tex/modules/2-V/activities.tex
+++ b/tex/modules/2-V/activities.tex
@@ -130,20 +130,20 @@ The space of \term{\(m \times n\) matrices}
 \begin{activity}{20}
   Consider the set \(V=\setBuilder{(x,y)}{y=e^x}\) with operations defined by
   \[
-    (x,y)\oplus (z,w)=(x+z,yw)
+    (x_1,y_1)\oplus (x_2,y_2)=(x_1+x_2,y_1y_2)
       \hspace{3em}
-    c\odot (x,y)=(cx,y^c)
+    c\odot (x_1,y_1)=(cx_1,y_1^c)
   \]
   \begin{subactivity}
-  Show that \(V\) satisfies the distribution property
-  \[(a+b)\odot\vec v=(a\odot\vec v)\oplus (b\odot\vec v)\]
-  by substituting \(\vec v=(x,y)\) and showing both sides simplify to the same
+  Show that \(V\) satisfies the distributive property
+  \[(a+b)\odot (x_1,y_1)=(a\odot (x_1,y_1)\oplus (b\odot (x_1,y_1)\]
+  by simplifying both sides and verifying they are the same
   expression.
   \end{subactivity}
   \begin{subactivity}%optional
   Show that \(V\) contains an additive identity element satisfying
-  \[(x,y)\oplus\vec{z}=(x,y)\]
-  for all \((x,y)\in V\)
+  \[(x_1,y_1)\oplus\vec{z}=(x_1,y_1)\]
+  for all \((x_1,y_1)\in V\)
   by choosing appropriate values for \(\vec{z}=(\unknown,\unknown)\). 
   \end{subactivity}
 \end{activity}
@@ -152,9 +152,9 @@ The space of \term{\(m \times n\) matrices}
 \begin{remark}
   It turns out \(V=\setBuilder{(x,y)}{y=e^x}\) with operations defined by
   \[
-    (x,y)\oplus (z,w)=(x+z,yw)
+    (x_1,y_1)\oplus (x_2,y_2)=(x_1+x_2,y_1y_2)
       \hspace{3em}
-    c\odot (x,y)=(cx,y^c)
+    c\odot (x_1,y_1)=(cx_1,y_1^c)
   \]
   satisifes all eight properties.
 
