Fix missing parenthesis

--- a/tex/modules/2-V/activities.tex
+++ b/tex/modules/2-V/activities.tex
@@ -136,7 +136,7 @@ The space of \term{\(m \times n\) matrices}
   \]
   \begin{subactivity}
   Show that \(V\) satisfies the distributive property
-  \[(a+b)\odot (x_1,y_1)=(a\odot (x_1,y_1)\oplus (b\odot (x_1,y_1)\]
+  \[(a+b)\odot (x_1,y_1)=\left(a\odot (x_1,y_1)\right)\oplus \left(b\odot (x_1,y_1)\right)\]
   by simplifying both sides and verifying they are the same
   expression.
   \end{subactivity}
