remove basis solution that only appeals to identity matrix

--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -467,10 +467,9 @@ Compute
 Since the fourth column is not a pivot column, the vectors are linearly
 dependent and thus not a basis of \(\IR^4\).
 
-(Alternate solutions:
-Since the fourth row not a pivot row, the vectors do not span
-\(\IR^4\) and thus are not a basis of \(\IR^4\). Or since the resulting matrix is not
-the identity matrix, the set of vectors is not a basis of \(\IR^4\).)
+(Alternate solution:)
+Since the fourth row is not a pivot row, the vectors do not span
+\(\IR^4\) and thus are not a basis of \(\IR^4\).
 \end{solution}
 
 
