--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -672,7 +672,7 @@ so \(T\) does not respect addition and is therefore not a linear transformation.
 As for \(T\), we may choose the polynomial \(f(x)=x\) and scalar \(c=2\). Then
 \[T(cf(x))=T(2x)=3(2x)'(2x)=3(2)(2x)=12x.\]
 
-But on the other hand, \[cT(f(x))=2T(x)=2(3)(2x)'(2x)=2(3)(2)(2x)=24x.\]
+But on the other hand, \[cT(f(x))=2T(x)=2(3)(x)'(x)=2(3)(1)(x)=6x.\]
 Since this isn't the same polynomial, \(T\) does not preserve multiplication
 and is therefore not a linear transformation. 
 \end{solution}
